# poly2tri-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: bench.rs
examples/: draw.rs  point_associate_data.rs  square.rs  stress.rs
examples/utils/: mod.rs
src/: cdt.rs  context.rs  lib.rs  loader.rs  points.rs  shape.rs  sweeper.rs  triangles.rs  utils.rs
src/advancing_front/: mod.rs  vec_backed.rs
templates/: draw_template.html
test_data/: draw_sample  random_100
