[package]
name = "poly2tri-rs"
version = "0.1.0"
edition = "2021"
description = "An idiomatic and fast Constrained Delaunay Triangulation library"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }
clap = { version = "4.1.8", features = ["derive"] }
svg = "0.13.0"
askama = "0.12"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
