[package]
name = "poly2tri-rs"
version = "0.1.2"
edition = "2021"
description = "An idiomatic and fast Constrained Delaunay Triangulation library"
repository = "https://github.com/shuoli84/poly2tri-rs"
license = "MIT OR Apache-2.0"
keywords = ["triangulation", "mesh"]

[dependencies]
thiserror = "1.0"
robust = "1.0"
sweep-bptree = { path = "/Users/shuoli/developer/pr/sweep-bptree" }

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }
clap = { version = "4.1.8", features = ["derive"] }
svg = "0.13.0"
askama = "0.12"

[[bench]]
name = "bench"
harness = false

[features]
f32 = []

[profile.release]
debug = true
